druid-derive/tests/ui/with-snake_case.rs
#![allow(non_camel_case_types)]

use druid::*;

#[derive(Lens)]
struct my_thing {
    field: i32
}

fn main() {}
